--- a/environment.yml
+++ b/environment.yml
@@ -2,9 +2,9 @@ channels:
 - conda-forge
 dependencies:
 - python
-- pyiron =0.4.3
-- pyiron_atomistics =0.2.9
-- lammps =2021.02.10=*openmpi*_4
-- gpaw =21.1.0
-- sphinxdft =2.7.0
-- nglview =2.7.7
+- pyiron =0.5.0
+- pyiron_atomistics =0.3.2
+- lammps =2023.08.02
+- gpaw =23.9.1
+- sphinxdft =3.0.7
+- nglview =3.0.8
